--- a/src/main/resources/LoginScreen.fxml
+++ b/src/main/resources/LoginScreen.fxml
@@ -18,7 +18,8 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="10.0" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="16.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Button fx:id="dropboxButton" mnemonicParsing="false" onAction="#onDropboxButtonClick" prefHeight="144.0" prefWidth="339.0" text="Dropbox" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -46,5 +47,13 @@
          </font>
       </Button>
       <Label fx:id="omniTitleLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="51.0" prefWidth="336.0" text="OmniDrive" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button fx:id="boxButton" mnemonicParsing="false" onAction="#onBoxButtonClick" prefHeight="143.0" prefWidth="345.0" text="Box" GridPane.columnIndex="1" GridPane.rowIndex="5">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <GridPane.margin>
+            <Insets bottom="5.0" top="5.0" />
+         </GridPane.margin>
+      </Button>
    </children>
 </GridPane>
