--- a/src/main/resources/LoginScreen.fxml
+++ b/src/main/resources/LoginScreen.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="loginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="omnidrive.ui.login.LoginController">
+<GridPane fx:id="loginPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="omnidrive.ui.login.LoginController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="336.0" minWidth="10.0" prefWidth="335.0" />
@@ -18,11 +18,10 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="16.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="dropboxButton" mnemonicParsing="false" onAction="#onDropboxButtonClick" prefHeight="144.0" prefWidth="339.0" text="Dropbox" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Button id="0" fx:id="dropboxButton" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="144.0" prefWidth="339.0" text="Dropbox" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets bottom="5.0" top="5.0" />
          </GridPane.margin>
@@ -30,15 +29,7 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="googleDriveButton" mnemonicParsing="false" onAction="#onGoogleDriveButtonClick" prefHeight="143.0" prefWidth="336.0" text="Google Drive" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <GridPane.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </GridPane.margin>
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button fx:id="oneDriveButton" mnemonicParsing="false" onAction="#onOneDriveButtonClick" prefHeight="143.0" prefWidth="345.0" text="OneDrive" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <Button id="1" fx:id="googleDriveButton" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="143.0" prefWidth="336.0" text="Google Drive" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" top="5.0" />
          </GridPane.margin>
@@ -47,7 +38,7 @@
          </font>
       </Button>
       <Label fx:id="omniTitleLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="51.0" prefWidth="336.0" text="OmniDrive" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Button fx:id="boxButton" mnemonicParsing="false" onAction="#onBoxButtonClick" prefHeight="143.0" prefWidth="345.0" text="Box" GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <Button id="2" fx:id="boxButton" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="143.0" prefWidth="345.0" text="Box" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <font>
             <Font size="24.0" />
          </font>
