--- a/src/main/resources/AccountsScreen.fxml
+++ b/src/main/resources/AccountsScreen.fxml
@@ -13,7 +13,7 @@
          <children>
             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@omnidrive_icon.png" />
+                  <Image url="@omnidrive_icon_rounded_128.png" />
                </image>
                <HBox.margin>
                   <Insets left="20.0" top="20.0" />
