--- a/src/main/resources/AccountsScreen.fxml
+++ b/src/main/resources/AccountsScreen.fxml
@@ -21,12 +21,12 @@
             </ImageView>
             <Pane prefHeight="100.0" prefWidth="497.0">
                <children>
-                  <Label layoutX="14.0" layoutY="61.0" prefHeight="33.0" prefWidth="449.0" text="Select any cloud account, register and rule it." textFill="#656363">
+                  <Label layoutX="14.0" layoutY="61.0" prefHeight="33.0" prefWidth="449.0" text="Set up your accounts to use with OmniDrive" textFill="#656363">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="28.0" prefHeight="33.0" prefWidth="449.0" text="Use OneDrive to rule them all!">
+                  <Label layoutX="14.0" layoutY="28.0" prefHeight="33.0" prefWidth="449.0" text="OmniDrive - one drive to rule them all">
                      <font>
                         <Font size="16.0" />
                      </font>
